fix(home.scss): fixed margins on mobile causing problems with alignment

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -247,7 +247,8 @@
 
 .th-section-a,
 .th-section-b {
-  // margin-left: 40rem;
-  margin-right: 5rem;
+  @media (min-width: 1024px) {
+    margin-right: 5rem;
+  }
 }
 // ! Third Section End
